force-app/main/default/objects/OW_rtq_assessment__c/OW_rtq_assessment__c.object-meta.xml
<CustomObject>
    <description>This object stores Risk Tolerance Questionnaire (RTQ) assessments fetched from Oxford Risk. These are effectively templates for the RTQs that individual customers answer containing the questions they must respond to along with unique identifiers passed to Oxford Risk allowing them to process the responses.</description>
    <label>RTQ Assessment</label>
    <nameField>
        <displayFormat>RTQA-{0}</displayFormat>
        <label>RTQ assessment reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTQ Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>