force-app/main/default/objects/OW_rtq_assessment__c/fields/OW_assessment_id__c.field-meta.xml
<CustomField>
    <fullName>OW_assessment_id__c</fullName>
    <description>The assessment ID of the RTQ that belongs to an instrument. Oxford Risk allow you to assign multiple assessment IDs to an instrument response but this is only used for the RTQ so we expect a single ID

ID provided by Oxford Risk. This is set as part of the RTQ assessment update process by the integration user over the portal. Admins must also have access but no other human users need to be able to see this.</description>
    <label>Assessment ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>