force-app/main/default/objects/OW_rtq_assessment__c/fields/OW_instrument_version__c.field-meta.xml
<CustomField>
    <fullName>OW_instrument_version__c</fullName>
    <description>Provided by Oxford Risk. This is set as part of the RTQ assessment update process by the integration user over the portal. Admins must also have access but no other human users need to be able to see this.</description>
    <label>Instrument Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>