force-app/main/default/objects/OW_rtq_assessment__c/fields/OW_question_01_ref_id__c.field-meta.xml
<CustomField>
    <fullName>OW_question_01_ref_id__c</fullName>
    <description>This field contains the unique ID of the question recognised by Oxford Risk and used in the APIs we interact with. The ID is set by the portal as part of the RTQ assessment update process and must be readable as part of the display to customers too. No access is needed to this by regular users - just admins and as part of the integration.</description>
    <label>Question 01 ref ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>