force-app/main/default/objects/OW_rtq_assessment__c/fields/OW_question_07_text__c.field-meta.xml
<CustomField>
    <fullName>OW_question_07_text__c</fullName>
    <description>This field contains the question that will be displayed to the customer via the portal. The question text is set by the portal as part of the RTQ assessment update process and must be readable as part of the display to customers too. The question is displayed to users as part of a formula field and so no access to this field is needed generally.</description>
    <label>Question 07</label>
    <length>255</length>
    <type>Text</type>
</CustomField>