force-app/main/default/objects/OW_rtq_assessment__c/fields/OW_rtq_assessment_external_id__c.field-meta.xml
<CustomField>
    <fullName>OW_rtq_assessment_external_id__c</fullName>
    <description>The unique identifier functions as a secondary, external key, enabling Connect to uniquely identify records prior to their having a Salesforce ID assigned.

ID provided by Oxford Risk. This is set as part of the RTQ assessment update process by the integration user over the portal. Admins must also have access but no other human users need to be able to see this.</description>
    <externalId>true</externalId>
    <label>RTQ assessment external id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>