force-app/main/default/objects/OW_rtq_assessment__c/validationRules/onlyAdminCanEditIDs.validationRule-meta.xml
<ValidationRule>
    <fullName>onlyAdminCanEditIDs</fullName>
    <active>true</active>
    <description>To prevent unintended edits to the fields that drive the Oxford Risk integration, only admins can manage the ID fields.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c 

&amp;&amp;

($Profile.Name  &lt;&gt; &quot;System Administrator&quot;

&amp;&amp;

OR( 
ISCHANGED( OW_assessment_id__c ),
ISCHANGED( OW_instrument_id__c ),
ISCHANGED( OW_instrument_version__c ),
ISCHANGED( OW_question_01_ref_id__c ),
ISCHANGED( OW_question_02_ref_id__c ),
ISCHANGED( OW_question_03_ref_id__c ),
ISCHANGED( OW_question_04_ref_id__c ),
ISCHANGED( OW_question_05_ref_id__c ),
ISCHANGED( OW_question_06_ref_id__c ),
ISCHANGED( OW_question_07_ref_id__c ),
ISCHANGED( OW_question_08_ref_id__c ),
ISCHANGED( OW_question_09_ref_id__c ),
ISCHANGED( OW_question_10_ref_id__c ),
ISCHANGED( OW_question_11_ref_id__c ),
ISCHANGED( OW_question_12_ref_id__c ),
ISCHANGED( OW_question_13_ref_id__c ),
ISCHANGED( OW_question_14_ref_id__c ),
ISCHANGED( OW_question_15_ref_id__c ),
ISCHANGED( OW_question_16_ref_id__c ),
ISCHANGED( OW_question_17_ref_id__c ),
ISCHANGED( OW_question_18_ref_id__c ),
ISCHANGED( OW_question_19_ref_id__c ),
ISCHANGED( OW_question_20_ref_id__c )
))</errorConditionFormula>
    <errorMessage>Changes to the ID fields will impact the Oxford Risk integration. Only administrators can change these. Please contact one for support.</errorMessage>
</ValidationRule>