force-app/main/default/objects/OW_rtq_assessment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OW_assessment_id__c</columns>
    <columns>OW_instrument_id__c</columns>
    <columns>OW_instrument_version__c</columns>
    <columns>OW_status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>